--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <div class="col-md-8">
       <h1 class="typing-effect">I'm  <span> Eliel Nyamekye</span></h1>
       <p>a passionate front-end developer currently studying Computer Science at the Accra Institute of Technology. With 3 years of experience as a home tutor in web development, I have a deep love for creating interactive and user-friendly web applications.</p>
-      <p>My keen eye for design and background in Computer Science have helped me hone my skills in HTML, CSS, and JavaScript. I am constantly exploring new technologies and frameworks to enhance my development toolkit, including popular tools like Bootstrap and VS Code.</p>
-      <p>I enjoy solving complex problems and turning ideas into reality through code. Whether it's building a sleek portfolio or developing a responsive website, I thrive on challenges and am dedicated to delivering high-quality results. When I'm not coding, you can find me gaming, reading, or listening to classical music, which helps me stay creative and inspired.</p>
+      <p>My keen eye for design and background in Computer Science have helped me hone my skills in HTML, CSS, and JavaScript. I am constantly exploring new technologies and frameworks to enhance my development toolkit, including popular tools like React.</p>
+      <p>I enjoy solving complex problems and turning ideas into reality through code. I thrive on challenges and am dedicated to delivering high-quality results. When I'm not coding, you can find me gaming, reading, or listening to classical music, which helps me stay creative and inspired.</p>
       <p>I'm always eager to learn, grow, and collaborate with others in the tech community. I also run a blog where I share my experiences and insights about front-end development. Here are some highlights:</p>
       <ul>
         <li><strong>My Journey as a Front-end Developer</strong>: Discover how I started, the challenges I've faced, and how I've grown over the years.</li>
