--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <a href="https://github.com/ElielBright" target="_blank" class="mx-2">
                 <i class="fab fa-github fa-2x"></i>
             </a>
-            <a href="https://www.instagram.com/ElielBright/" target="_blank" class="mx-2">
+            <a href="https://www.instagram.com/elielbright3/" target="_blank" class="mx-2">
                 <i class="fab fa-instagram fa-2x"></i>
             </a>
         </div>
