--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <p>
                   Hi, I'm <strong>Eliel Kwesi Nyamekye</strong>, a passionate <strong>full-stack developer</strong>, tech enthusiast, 
                   and machine learning explorer. I specialize in creating modern applications using 
-                  <strong>React</strong>, <strong>Node.js</strong>, <strong>Express.js</strong>, <strong>MongoDB</strong>, and <strong>Python</strong>.
+                  <strong>React</strong>, <strong>Node.js</strong>, <strong>Express.js</strong>, <strong>MongoDB</strong>, and <strong>Python</strong>for Machine Learning.
               </p>
               
               <!-- Quote -->
