--- a/index.html
+++ b/index.html
@@ -375,8 +375,10 @@
                     <textarea id="message" name="message" class="form-control" rows="5" required></textarea>
                 </div>
                 <div class="button-container">
-                  <button type="submit" class="btn btn-success submit-button">Send</button>
-                </div>
+                  <button type="submit" class="btn btn-success submit-button">
+                    <i class="fas fa-paper-plane"></i> Send
+                </button>
+                                </div>
                 </form>
         </section>
     </main>
