--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             </a>
             
         </div>
-        <p>&copy; 2024 Eliel Bright. All rights reserved.</p>
+        <p>&copy; 2023 Eliel Kwesi Agbeke. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
