--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                 <ul>
                     <li>I'm a tech mentor by day and a code ninja by night – teaching kids how to build robots, code their own games, and unleash their inner inventors!</li>
                     <li>My team and I once crushed a hackathon by building an epic <strong>3D learning platform with Augmented Reality</strong> – making education feel like a futuristic adventure!</li>
+                    <li>I'm proud to have over <strong>3,000 learners on Udemy</strong> enrolled in my courses, including <strong>React for Beginners</strong> – helping others master the skills to build amazing web apps!</li>
                     <li>I love transforming wild ideas into working solutions – whether it's crafting cool animations, building clever AI tools, or turning “what if...” into “heck yeah, it works!”</li>
                     <li>When I’m not coding, you'll probably find me geeking out over new tech, brainstorming big ideas, or teaching others how to craft their ideas with code.</li>
                 </ul>
@@ -273,7 +274,28 @@
         </div>
       </div>
     </div>
-
+    <div class="col">
+      <div class="card h-100">
+        <a href="https://scripture-and-spirit-podcast.vercel.app/" target="_blank">
+          <img src="img/AreSistv.png" class="card-img-top" alt="AreSistv">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">AreSistv</h5>
+          <p class="card-text">An accessibilty tool, built as a chrome extension</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <a href="https://scripture-and-spirit-podcast.vercel.app/" target="_blank">
+          <img src="img/RAG.png" class="card-img-top" alt="RAG">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title"> RAG</h5>
+          <p class="card-text">A custom made RAG that helps you with information concerning the use of tools</p>
+        </div>
+      </div>
+    </div>
 
     
 
