--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <a href="https://scripture-and-spirit-podcast.vercel.app/" target="_blank">
+        <a href="#" target="_blank">
           <img src="img/AreSistv.png" class="card-img-top" alt="AreSistv">
         </a>
         <div class="card-body">
@@ -287,7 +287,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <a href="https://scripture-and-spirit-podcast.vercel.app/" target="_blank">
+        <a href="#" target="_blank">
           <img src="img/RAG.png" class="card-img-top" alt="RAG">
         </a>
         <div class="card-body">
