--- a/index.html
+++ b/index.html
@@ -168,6 +168,22 @@
 <section id="projects" class="mb-5">
   <h2 class="text-center text-success" style="font-weight: bold; font-size: 30px;">Projects</h2>
   <div class="row row-cols-1 row-cols-md-3 g-4">
+
+
+<!-- Object Detection Bot -->
+<div class="col">
+      <div class="card h-100">
+          <img src="img/3dinteractive.png" class="card-img-top" alt="3D Interactive Learning">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Object Detection Bot</h5>
+          <p class="card-text">An object detection bot, making use of computer vision, AI and Arduino</p>
+          <a href="https://github.com/ElielBright/Object-detection-bot.git" class="btn btn-secondary" target="_blank">GitHub Repo</a>
+        </div>
+      </div>
+    </div>
+
+
     
     <!-- 3D Interactive Learning -->
     <div class="col">
