Updated index.html and added object detection bot image

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <!-- Object Detection Bot -->
 <div class="col">
       <div class="card h-100">
-          <img src="img/3dinteractive.png" class="card-img-top" alt="3D Interactive Learning">
+          <img src="img/object-detection-bot.png" class="card-img-top" alt="3D Interactive Learning">
         </a>
         <div class="card-body">
           <h5 class="card-title">Object Detection Bot</h5>
